k8s-deployment.yaml
apiVersion: v1
kind: Service
metadata:
    name: nats
spec:
    ports:
        - name: nats
          port: 4222
    selector:
        app: nats
---
# We are not using a persistent volume claim here and no replication for NATS.
# Both should actually be done, we just skip it for simplicity of this demo.
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: nats
spec:
    selector:
        matchLabels:
            app: nats
    serviceName: nats
    replicas: 1
    template:
        metadata:
            labels:
                app: nats
        spec:
            containers:
                - name: nats
                  image: nats:2.6.6
                  # Activate JetStream (quick & dirty, better use a NATS config map instead)
                  args: ["-js"]
                  ports:
                      - name: nats
                        containerPort: 4222
---
apiVersion: v1
kind: Service
metadata:
    name: chat-service
spec:
    selector:
        app: chat-app
    ports:
        - port: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: chat-app-deployment
spec:
    selector:
        matchLabels:
            app: chat-app
    replicas: 2
    template:
        metadata:
            labels:
                app: chat-app
        spec:
            containers:
                - name: next-nats-k8s-demo
                  image: next-nats-k8s-demo:0.1.0
                  ports:
                      - containerPort: 3000
                  volumeMounts:
                      - name: chat-app-config-volume
                        mountPath: /etc/config
            volumes:
                - name: chat-app-config-volume
                  configMap:
                      name: chat-app-configmap
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: chat-app-ingress
spec:
    ingressClassName: nginx
    rules:
        - http:
              paths:
                  # Must be kept in sync with the `basePath` in `next.config.js`
                  - path: /chat
                    pathType: Prefix
                    backend:
                        service:
                            name: chat-service
                            port:
                                number: 3000
